--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@master/css": "^2.0.0-rc.26",
     "@master/css.nuxt": "^2.0.0-rc.26",
     "@master/normal.css": "^2.1.1",
+    "bootstrap-icons": "^1.11.3",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
