--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@master/css.nuxt": "^2.0.0-rc.26",
     "@master/normal.css": "^2.1.1",
     "bootstrap-icons": "^1.11.3",
+    "jenesius-vue-modal": "^1.11.1",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
