--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@master/css": "^2.0.0-rc.26",
     "@master/css.nuxt": "^2.0.0-rc.26",
     "@master/normal.css": "^2.1.1",
-    "@vueup/vue-quill": "^1.2.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "bootstrap-icons": "^1.11.3",
     "jenesius-vue-modal": "^1.11.1",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
+    "vue-client-recaptcha": "^1.1.4",
     "vue-router": "^4.3.0",
     "vue3-carousel": "^0.3.1"
   }
