--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.11.3",
     "jenesius-vue-modal": "^1.11.1",
     "nuxt": "^3.11.1",
+    "nuxt-lazy-load": "^3.0.4",
     "vue": "^3.4.21",
     "vue-client-recaptcha": "^1.1.4",
     "vue-router": "^4.3.0",
