--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "jenesius-vue-modal": "^1.11.1",
     "nuxt": "^3.11.1",
+    "nuxt-3-axios": "^1.3.5",
     "vue": "^3.4.21",
     "vue-client-recaptcha": "^1.1.4",
     "vue-router": "^4.3.0",
